<resources>
    <string name="app_name">PdaControl</string>
    <string name="name">用户名: </string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="netSetting">网络设置</string>
    <string name="welcome">欢迎您 ：</string>
    <string name="goodInStore">物料入库</string>
    <string name="MaduoInStore">码垛入库</string>
    <string name="numAck">盘点确认</string>
    <string name="emptyInStore">空托入库</string>
    <string name="someAck">捡料确认</string>
    <string name="repairAck">补料确认</string>
    <string name="quitLogin">退出登录</string>
    <string name="goout">退出</string>
    <string name="inStoreSite">入库站口</string>
    <string name="stockId">托盘编号</string>
    <string name="inStoreStyle">入库类型</string>
    <string name="inStorePoint">入库库位</string>
    <string name="goodId">物料编号</string>
    <string name="inStoreNum">入库数量</string>
    <string name="productDate">生产日期</string>
    <string name="full_check">满托标志</string>
    <string name="good_id">物料编号 ：</string>
    <string name="good_name">物料名称 ：</string>
    <string name="good_number">物料数量 ：</string>
    <string name="good_date">生产日期 ：</string>
    <string name="home">回到主界面</string>
    <string name="fire">提交</string>
    <string name="pallet_id">托盘编号 :  </string>
    <string name="find_product">确定</string>
    <string name="back">返回</string>
    <string name="ready_store">实际库存数量</string>
    <string name="ok">确定</string>
    <string name="port">入库站口 :</string>
    <string name="add_product">添加新物料</string>
    <string name="instore">入库</string>
    <string name="ip">IP地址 :</string>
    <string name="service_name">服务器 :</string>
    <string name="save_setting">保存设置</string>
    <string name="product_id">物料编号 :</string>
    <string name="port_point">捡料口 :</string>
</resources>
