<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:id="@+id/port_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="140dp"
        android:text="@string/port"/>

    <TextView
        android:id="@+id/pallet_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/port_id"
        android:layout_below="@+id/port_id"
        android:layout_marginTop="60dp"
        android:text="@string/pallet_id"/>

    <TextView
        android:id="@+id/inStorePoint"
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"

        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/port_id"
        android:layout_below="@+id/pallet_id"
        android:text="@string/inStorePoint"/>



    <EditText
        android:id="@+id/port_id_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_alignBaseline="@+id/port_id"
        android:layout_toEndOf="@+id/port_id"
        android:ems="10"
        android:inputType="number"/>

    <EditText
        android:id="@+id/pallet_id_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/pallet_id"
        android:layout_alignStart="@+id/port_id_edit"
        android:layout_alignBaseline="@+id/pallet_id"
        android:ems="10"
       />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/inStorePoint"
        android:layout_alignEnd="@+id/port_id_edit"
        android:layout_alignStart="@+id/pallet_id_edit"/>


    <Button
        android:id="@+id/instoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instore"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/inStorePoint"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignTop="@+id/instoreBtn"
        android:layout_toEndOf="@+id/instoreBtn"
        android:layout_marginStart="60dp"/>
</RelativeLayout>