<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="140dp"
        android:text="@string/ip"/>

    <TextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ip_address"
        android:layout_below="@+id/ip_address"
        android:layout_marginTop="60dp"
        android:text="@string/service_name"/>




    <EditText
        android:id="@+id/ip_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_alignBaseline="@+id/ip_address"
        android:layout_toEndOf="@+id/ip_address"
        android:ems="10"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="number"/>

    <EditText
        android:singleLine="true"
        android:maxLines="1"
        android:id="@+id/service_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/service_name"
        android:layout_alignStart="@+id/ip_edit"
        android:layout_alignBaseline="@+id/service_name"
        android:ems="10"
        />

    <Button
        android:id="@+id/instoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_setting"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/service_name"
        android:layout_alignStart="@+id/ip_address"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignTop="@+id/instoreBtn"
        android:layout_toEndOf="@+id/instoreBtn"
        android:layout_marginStart="60dp"/>
</RelativeLayout>