<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/port"/>

    <EditText
        android:id="@+id/port_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/port"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/port"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/port"
        android:layout_alignStart="@+id/port"
        android:layout_marginBottom="15dp"
        android:text="@string/pallet_id"/>

    <EditText
        android:layout_marginBottom="15dp"
        android:id="@+id/prodcut_id_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/product_id"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/product_id"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"/>


    <de.codecrafters.tableview.TableView
        android:id="@+id/product_tableView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/product_id"/>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/find_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:text="@string/find_product"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/BackBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:layout_marginEnd="29dp"
            android:layout_alignTop="@+id/find_product_btn"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:layout_alignBaseline="@+id/find_product_btn"
            android:layout_alignTop="@+id/find_product_btn"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>