<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="140dp"
        android:text="@string/port_point"/>

    <TextView
        android:id="@+id/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/port"
        android:layout_below="@+id/port"
        android:layout_marginTop="60dp"
        android:text="@string/product_id"
        />


    <EditText
        android:id="@+id/port_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_alignBaseline="@+id/port"
        android:layout_toEndOf="@+id/port"
        android:ems="10"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="number"/>

    <EditText
        android:singleLine="true"
        android:maxLines="1"
        android:id="@+id/prodcut_id_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/product_id"
        android:layout_alignStart="@+id/port_edit"
        android:layout_alignBaseline="@+id/product_id"
        android:ems="10"
        />



    <Button
        android:id="@+id/instoreBtn"
        android:layout_below="@+id/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/port"
        android:layout_marginTop="70dp"
        android:text="录入"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignTop="@+id/instoreBtn"
        android:layout_toEndOf="@+id/instoreBtn"
        android:layout_marginStart="60dp"/>
</RelativeLayout>