<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/pallet_id"/>

    <EditText
        android:id="@+id/service_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/service_name"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/service_name"
        android:ems="10"
        android:maxLines="1"
        android:singleLine="true"/>


    <de.codecrafters.tableview.TableView
        android:id="@+id/product_tableView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@+id/service_name"/>

    <ViewStub
        android:id="@+id/viewStub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inflatedId="@id/product_tableView"
        android:layout="@layout/viewpro"/>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/product_tableView"
        android:background="@color/gray">

        <Button
            android:id="@+id/find_product_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="91dp"
            android:text="@string/find_product"/>

        <Button
            android:id="@+id/BackBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/find_product_btn"
            android:layout_alignTop="@+id/find_product_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/find_product_btn"
            android:text="@string/back"/>

    </RelativeLayout>

</RelativeLayout>