<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/inStoreSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/inStoreSite"/>

    <EditText
        android:id="@+id/inStorePointEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/inStoreSite"
        android:layout_alignBottom="@+id/inStoreSite"
        android:layout_marginStart="29dp"
        android:layout_toEndOf="@+id/inStoreSite"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/stockId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/inStoreSite"
        android:layout_below="@+id/inStoreSite"
        android:layout_marginTop="51dp"
        android:text="@string/stockId"/>

    <EditText
        android:id="@+id/stockIdEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stockId"
        android:layout_alignBottom="@+id/stockId"
        android:layout_alignStart="@+id/inStorePointEdit"
        android:ems="10"
        android:inputType="number"/>




    <TextView
        android:id="@+id/inStoreStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="入库类型"
        android:layout_below="@+id/stockIdEdit"
        android:layout_alignStart="@+id/stockId"
        android:layout_marginTop="39dp"/>

    <Spinner
        android:id="@+id/StyleSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/inStoreStyle"
        android:layout_alignStart="@+id/stockIdEdit"
        android:layout_alignEnd="@+id/stockIdEdit"/>



    <TextView
        android:layout_below="@+id/inStoreStyle"
        android:layout_marginTop="51dp"
        android:id="@+id/inStorePoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inStorePoint"
        android:layout_alignStart="@+id/stockId"/>

    <Spinner
        android:id="@+id/pointSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_alignTop="@+id/inStorePoint"
        android:layout_alignStart="@+id/stockIdEdit"
        android:layout_alignEnd="@+id/StyleSpin"/>



    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="下一步"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_alignStart="@+id/inStorePoint"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="返回"
        android:layout_below="@+id/pointSpin"
        android:layout_alignEnd="@+id/pointSpin"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="连接状态"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/inStorePoint"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="34dp"/>

</RelativeLayout>